--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hotelbookingsystem
+spring.datasource.username=root
+spring.datasource.password=1234ww
 
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+logging.level.org.springframework.security=DEBUG
